tests/paczka1/small_fuzzy/32815696.err
Error in line 8: A272 A178 21,8
Error in line 16: A272 S824 158,95
